--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "index.js"
   ],
   "devDependencies": {
+    "@babel/eslint-parser": "7.x.x",
+    "@babel/eslint-plugin": "7.x.x",
     "eslint": "7.x.x",
     "eslint-config-airbnb-base": "14.x.x",
     "eslint-plugin-import": "2.x.x"
   },
   "peerDependencies": {
+    "@babel/eslint-parser": "7.x.x",
+    "@babel/eslint-plugin": "7.x.x",
     "eslint": "7.x.x",
     "eslint-config-airbnb-base": "14.x.x",
     "eslint-plugin-import": "2.x.x"
